resourses/css/main.css
/* ... */
@media only screen and (max-width: 280px) {
  header {
    width:100%;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 70px 50px 1fr;
  }
  .logo {
    grid-row: 1/2;
    grid-column: 2/3;
    margin-bottom: 1rem;
  }
  h1 {
    grid-row: 2/3;
    grid-column: 1/4;
    font-size: 1.2rem;
  }
  .subscribe {
    display:none;
  }
  nav {
    grid-row: 3/4;
    grid-column:1/4;
  }
  nav a {
    font-size: 0.5rem;
  }
  .facons {
    font-size: 1rem;
  }
  
}


/****************************************************************
********************* NEWS LIST PAGE ****************************
*****************************************************************/

.news {
  width: 95%;
  display: flex;
  flex-wrap: wrap;
  padding-bottom: 2rem;
  box-sizing: border-box;
  border: solid 0.3px hsla(0, 0%, 70%, 0.5);
  margin: auto;
  
}
main h2 {
  text-align: center;
  padding-top: 1rem;
}
.date, .place, .show-date {
  width: 20%;
  
}
.date p {
  font-size: 1.2rem;
  font-weight:200;
  
  text-align: center;
  margin-right: 20px;
}
.extract {
  max-width: 70%;
}
.readmore {
  box-sizing: border-box;
  border: solid 1px white;
  color:hsl(0, 0%, 90%);
  font-size: 0.7rem;
  text-transform: uppercase;
  padding: 5px;
  text-decoration: none; 
}
.readmore:hover {
  color:hsl(0, 0%, 75%);
  border-color: hsl(0, 0%, 75%);
}

/****************************************************************
***************** AUDIO LIST *****************************************
****************************************************************/
.albums {
  display: flex;
  flex-wrap: wrap;
  width: 95%;
  padding-bottom: 2rem;
  margin: auto;
  
}
.albums p {
  margin-top: 0px;
}
.album-thumb {
  width: 200px;
  max-width: 500px;
  
  min-width: 200px;
  padding: 10px;
}
.album-item a {
  color:hsla(0, 0%, 90%, 1);
  font-weight: 700;
}
.album-item a:hover {
  color:hsla(0, 0%, 75%, 1)
}
.album-item p {
  text-align: center;
}
/****************************************************************
***************** EVENTS LIST *****************************************
****************************************************************/

.show-list {
  width: 95%;
  display: flex;
  flex-wrap: wrap;
  padding-bottom: 2rem;
  box-sizing: border-box;
  border-bottom: dotted 0.3px hsla(0, 0%, 70%, 0.5);
  margin: auto;
}

.show-description {
  max-width: 50%;
}
.book-show {
  box-sizing: border-box;
  background-color:hsl(0, 75%, 55%);
  color:hsl(0, 0%, 90%);
  font-size: 0.7rem;
  text-transform: uppercase;
  padding: 5px;
  text-decoration: none; 
  align-self: center;
  justify-self: center;
  margin: auto;
}
.book-show:hover {
 background-color:hsl(30, 76%, 50%)
}
.show-date p, .place p, .show-description p {
  margin-left: 1rem;
  margin-right: 1rem;
}


/****************************************************************
***************** Video LIST *****************************************
****************************************************************/
.videos {
display: flex;
flex-wrap: wrap;
width: 95%;
padding: 0px auto 2rem auto;
margin: auto;
}

.thumb-play {
  width: 320px;
  min-width: 200px;
  margin: 2rem;
  position: relative;
  text-align: center;
}
.thumb-play img {
  width:90%;
}
.thumb-play:hover {
  cursor: pointer;
}

.thumb-play i {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: hsl(0, 0%, 90%);
  font-size: 2.5rem;
}
.thumb-play p {
  text-align: center;
  position: absolute;
  display: block;
  bottom: 0;
  background-color: hsla(0, 0%, 15%, 0.7);
  width: 100%;
  padding: 0.5rem 0.5rem 1rem 0.5rem;
  margin-bottom: 0;
  height: auto;
  font-family: "Oswald";
  font-size: 0.9rem;
  
}
.video-box {
  display: none;
  position: fixed;
  z-index: 1;
  overflow: auto;
  background-color: black;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  padding: 2rem;
}
.close {
  color: white;
  position: absolute;
  top: 0.5rem;
  right: 1rem;
  font-size: 1.2rem;
  font-weight: bold;
}
.close:hover,
.close:focus {
  color: #999;
  text-decoration: none;
  cursor: pointer;
}

@media only screen and (max-width: 600px) {
  .videos {
    display: flex;
    flex-wrap: wrap;
    width: 100%;
    padding: 0px auto 2rem auto;
    margin: auto;
    }
    .thumb-play {
      width: 95%;
      min-width: 200px;
      margin: 2rem auto;
      position: relative;
      text-align: center;
    }
    .video-box {
      display: none;
      position: fixed;
      z-index: 1;
      overflow: hidden;
      background-color: black;
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%);
      padding: 2rem;
      width:80%;
    }
    .video-box iframe {
      width: 100%;
      margin: auto;
    }
    .close {
      color: white;
      position: absolute;
      top: 0.5rem;
      right: 1rem;
      font-size: 1.2rem;
      font-weight: bold;
    }
    .close:hover,
    .close:focus {
      color: #999;
      text-decoration: none;
      cursor: pointer;
    }
}

/****************************************************************
***************** FONTS *****************************************
****************************************************************/

           /************ OSWALD ****************/

@font-face {
    font-family: 'Oswald';
    font-style: normal;
    font-weight: 200;
    font-display: swap;
    src: url(https://fonts.gstatic.com/s/oswald/v36/TK3iWkUHHAIjg752GT8Gl-1PKw.woff2) format('woff2');
    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
  }
/* ... */

